[gd_scene load_steps=19 format=3 uid="uid://bkyofwm7o5iks"]

[ext_resource type="PackedScene" uid="uid://k1xcr44gpyd1" path="res://Scenes/enemy.tscn" id="1_dntw2"]
[ext_resource type="Script" path="res://Scripts/slime.gd" id="2_yk4vi"]
[ext_resource type="PackedScene" uid="uid://dbglhjvtg1lyp" path="res://Scenes/killzone.tscn" id="3_arwds"]
[ext_resource type="Texture2D" uid="uid://cern3pvgac3ph" path="res://Assets/sprites/slime_green.png" id="3_ko3ru"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y4pqw"]
size = Vector2(10, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_04oh0"]
atlas = ExtResource("3_ko3ru")
region = Rect2(0, 72, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubhmc"]
atlas = ExtResource("3_ko3ru")
region = Rect2(24, 72, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0wxt"]
atlas = ExtResource("3_ko3ru")
region = Rect2(48, 72, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0lxrq"]
atlas = ExtResource("3_ko3ru")
region = Rect2(72, 72, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3sib3"]
atlas = ExtResource("3_ko3ru")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_avm7q"]
atlas = ExtResource("3_ko3ru")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_cigsl"]
atlas = ExtResource("3_ko3ru")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6okb"]
atlas = ExtResource("3_ko3ru")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5iuls"]
atlas = ExtResource("3_ko3ru")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_imdfj"]
atlas = ExtResource("3_ko3ru")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4wi7"]
atlas = ExtResource("3_ko3ru")
region = Rect2(48, 48, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_byyuy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_04oh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubhmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0wxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lxrq")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3sib3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avm7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cigsl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6okb")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5iuls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imdfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4wi7")
}],
"loop": true,
"name": &"stun",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_b5d0n"]
radius = 5.0

[node name="Slime" instance=ExtResource("1_dntw2")]
collision_layer = 4
script = ExtResource("2_yk4vi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_y4pqw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." index="1"]
position = Vector2(0, -3)
sprite_frames = SubResource("SpriteFrames_byyuy")
animation = &"death"
autoplay = "default"

[node name="Killzone" parent="." index="2" instance=ExtResource("3_arwds")]

[node name="Killbox" type="CollisionShape2D" parent="Killzone" index="0"]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_b5d0n")

[node name="RayCastLedge" type="RayCast2D" parent="." index="3"]
position = Vector2(5, 9)
target_position = Vector2(2, 3)

[node name="RayCastWall" type="RayCast2D" parent="." index="4"]
position = Vector2(0, 3)
target_position = Vector2(7, 0)

[node name="StunTimer" parent="." index="5"]
wait_time = 5.0

[connection signal="player_died" from="Killzone" to="." method="_on_killzone_player_died"]
[connection signal="timeout" from="StunTimer" to="." method="_on_stun_timer_timeout"]
